--- a/src/main/resources/templates/session.html
+++ b/src/main/resources/templates/session.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <title>guess session value</title>
 </head>
 <body>
-    <h2>guess session page</h2>
+    <h2 th:text="${message}"></h2>
 </body>
 </html>
