--- a/src/main/resources/templates/session.html
+++ b/src/main/resources/templates/session.html
@@ -6,5 +6,14 @@
 </head>
 <body>
     <h2 th:text="${message}"></h2>
+
+    <div th:if="${session.guessCount != null}">
+        <form method="get" action="/get/session">
+            1부터 100사이의 숫자로 맞춰주세요.<br>
+            <input type="number" name="number"><br>
+            <input type="submit" value="확인">
+        </form>
+    </div>
+
 </body>
 </html>
